--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28324,3 +28324,15 @@ msgstr "AI helpers"
 
 msgid "ID of the user who officially sends the agenda reminders"
 msgstr "ID of the user who officially sends the agenda reminders"
+
+msgid "Session expired. Redirecting to login…"
+msgstr "Session expired. Redirecting to login…"
+
+msgid "Super admin"
+msgstr "Super admin"
+
+msgid "Global admin"
+msgstr "Global admin"
+
+msgid "Question manager"
+msgstr "Question manager"
