--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28304,3 +28304,6 @@ msgstr ""
 
 msgid "Question manager"
 msgstr ""
+
+msgid "Then enter the 6-digit code shown in your app at the bottom of the form."
+msgstr ""
