Language: Fix language terms in password change form

--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28339,3 +28339,12 @@ msgstr "Question manager"
 
 msgid "Then enter the 6-digit code shown in your app at the bottom of the form."
 msgstr "Then enter the 6-digit code shown in your app at the bottom of the form."
+
+msgid "Enter your 2FA code"
+msgstr "Enter your 2FA code"
+
+msgid "Enable two-factor authentication (2FA)"
+msgstr "Enable fwo-factor authentication (2FA)"
+
+msgid "Confirm new password"
+msgstr "Confirm new password"
