--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28307,3 +28307,12 @@ msgstr ""
 
 msgid "Then enter the 6-digit code shown in your app at the bottom of the form."
 msgstr ""
+
+msgid "Enter your 2FA code"
+msgstr ""
+
+msgid "Enable Two-Factor Authentication (2FA)"
+msgstr ""
+
+msgid "Confirm new password"
+msgstr ""
