Language: Add new language terms

--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28316,3 +28316,12 @@ msgstr ""
 
 msgid "Confirm new password"
 msgstr ""
+
+msgid "Classes of session"
+msgstr ""
+
+msgid "Classes of course"
+msgstr ""
+
+msgid "Select a class"
+msgstr ""
