--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28348,3 +28348,12 @@ msgstr "Enable fwo-factor authentication (2FA)"
 
 msgid "Confirm new password"
 msgstr "Confirm new password"
+
+msgid "Classes of session"
+msgstr "Classes of session"
+
+msgid "Classes of course"
+msgstr "Classes of course"
+
+msgid "Select a class"
+msgstr "Select a class"
