--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28357,3 +28357,6 @@ msgstr "Classes of course"
 
 msgid "Select a class"
 msgstr "Select a class"
+
+msgid "Course %s added. You can access it directly %shere%s."
+msgstr "Course %s added. You can access it directly %shere%s."
