--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -1778,7 +1778,7 @@ msgid "Message Sent"
 msgstr "Message envoyé"
 
 msgid "Settings"
-msgstr "Propriétés du cours"
+msgstr "Paramètres"
 
 msgid "The information has been modified"
 msgstr "Les informations ont été modifiées"
