--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -469,5 +469,7 @@
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
     "Not subscribed": "Not subscribed",
+    "Accept Terms and Conditions": "Accept Terms and Conditions",
+    "You accepted these terms on": "You accepted these terms on",
     "Go to your newly created portal.": "G\u00e5 till din nya portal."
 }
