--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -452,5 +452,7 @@
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
     "Not subscribed": "Not subscribed",
+    "Accept Terms and Conditions": "Accept Terms and Conditions",
+    "You accepted these terms on": "You accepted these terms on",
     "Go to your newly created portal.": "\u700f\u89bd\u4f60\u65b0\u5efa\u7684\u7ad9\u53f0"
 }
