--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -29568,3 +29568,9 @@ msgstr "Datenbankport"
 
 msgid "Database driver"
 msgstr "Datenbanktreiber"
+
+msgid "Accept Terms and Conditions"
+msgstr "Nutzungsbedingungen akzeptieren"
+
+msgid "You accepted these terms on"
+msgstr "Sie haben diese Nutzungsbedingungen akzeptiert am"
