--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -604,5 +604,7 @@
     "Private course": "Private course",
     "Not subscribed": "Not subscribed",
     "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "\u0641\u0634\u0644 \u0627\u0644\u0627\u062a\u0635\u0627\u0644 \u0628\u0642\u0627\u0639\u062f\u0629 \u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a\u060c \u0647\u0630\u0627 \u064a\u062d\u062f\u062b \u0628\u0633\u0628\u0628 \u062e\u0637\u0623 \u0641\u064a \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u060c \u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631 \u0627\u0648 \u0628\u0627\u062f\u0626\u0629 \u0642\u0627\u0639\u062f\u0629 \u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a\u060c \u064a\u0631\u062c\u0649 \u0645\u0631\u0627\u062c\u0639\u0629 \u0647\u0630\u0647 \u0627\u0644\u0627\u0639\u062f\u0627\u062f\u0627\u062a \u0645\u0631\u0629 \u0627\u062e\u0631\u0629",
+    "Accept Terms and Conditions": "Accept Terms and Conditions",
+    "You accepted these terms on": "You accepted these terms on",
     "Go to your newly created portal.": "Go to your newly created portal."
 }
