--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -507,5 +507,7 @@
     "Private course": "Private course",
     "Not subscribed": "Not subscribed",
     "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "La conesi\u00f3n a la base de datos fall\u00f3. Pue ser que'l nome d'usuariu, la se\u00f1a o el prefixu de la base datos nun valgan. Reviselos y vuelva intentalo.",
+    "Accept Terms and Conditions": "Accept Terms and Conditions",
+    "You accepted these terms on": "You accepted these terms on",
     "Go to your newly created portal.": "Dir a la plataforma qu'acaba crear."
 }
