--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -584,5 +584,7 @@
     "Private course": "Private course",
     "Not subscribed": "Not subscribed",
     "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "La connexi\u00f3 amb la base de dades ha fallat. Pot que el nom d'usuari, la contrasenya o el prefix de la base de dades siguin incorrectes. Reviseu totes aquestes dades i torneu a provar-ho.",
+    "Accept Terms and Conditions": "Accept Terms and Conditions",
+    "You accepted these terms on": "You accepted these terms on",
     "Go to your newly created portal.": "Aneu a la nova plataforma que heu creat."
 }
