--- a/assets/locales/id_ID.json
+++ b/assets/locales/id_ID.json
@@ -418,5 +418,7 @@
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
     "Not subscribed": "Not subscribed",
+    "Accept Terms and Conditions": "Accept Terms and Conditions",
+    "You accepted these terms on": "You accepted these terms on",
     "Go to your newly created portal.": "Lihat ke portal anda yang baru dibuat."
 }
