--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -450,5 +450,7 @@
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
     "Not subscribed": "Not subscribed",
+    "Accept Terms and Conditions": "Accept Terms and Conditions",
+    "You accepted these terms on": "You accepted these terms on",
     "Go to your newly created portal.": "\u041e\u0434\u0435\u0442\u0435 \u043d\u0430 \u0412\u0430\u0448\u0438\u043e\u0442 \u043d\u043e\u0432\u043e\u043a\u0440\u0435\u0438\u0440\u0430\u043d \u043f\u043e\u0440\u0442\u0430\u043b."
 }
