--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -573,5 +573,7 @@
     "Private course": "Private course",
     "Not subscribed": "Not subscribed",
     "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "Conexiunea cu baza de date a esuat.Poate numele de uzuar,pinul sau prefixul de la baza de date nu sunt corecte.Va rugam,revizati aceste date si incercati din nou",
+    "Accept Terms and Conditions": "Accept Terms and Conditions",
+    "You accepted these terms on": "You accepted these terms on",
     "Go to your newly created portal.": "Mergeti la portalul proaspat creat."
 }
