--- a/assets/locales/fo_FO.json
+++ b/assets/locales/fo_FO.json
@@ -332,5 +332,6 @@
     "Private course": "Private course",
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
-    "You accepted these terms on": "You accepted these terms on"
+    "You accepted these terms on": "You accepted these terms on",
+    "Revoke Acceptance": "Revoke Acceptance"
 }
