--- a/assets/locales/id_ID.json
+++ b/assets/locales/id_ID.json
@@ -420,5 +420,6 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
+    "Revoke Acceptance": "Revoke Acceptance",
     "Go to your newly created portal.": "Lihat ke portal anda yang baru dibuat."
 }
