--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -471,5 +471,6 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
+    "Revoke Acceptance": "Revoke Acceptance",
     "Go to your newly created portal.": "G\u00e5 till din nya portal."
 }
