--- a/translations/messages.es.po
+++ b/translations/messages.es.po
@@ -29378,3 +29378,6 @@ msgstr "Acepta los Términos y Condiciones"
 
 msgid "You accepted these terms on"
 msgstr "Aceptaste estos términos el"
+
+msgid "Revoke Acceptance"
+msgstr "Revocar la aceptación"
