--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -607,5 +607,6 @@
     "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "Die Verbindung zur Datenbank schlug fehl. Dies ist meist ein falscher Benutzername oder Kennwort oder auch das Pr\u00e4fix ist falsch. Bitte pr\u00fcfen Sie alle Daten und versuchen Sie es erneut.",
     "Accept Terms and Conditions": "Nutzungsbedingungen akzeptieren",
     "You accepted these terms on": "Sie haben diese Nutzungsbedingungen akzeptiert am",
+    "Revoke Acceptance": "Zustimmung widerrufen",
     "Go to your newly created portal.": "Gehen Sie zu Ihrem neu erstellten Portal"
 }
