--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -607,5 +607,6 @@
     "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "La conexi\u00f3n con la base de datos ha fallado. Puede que el nombre de usuario, la contrase\u00f1a o el prefijo de la base de datos sean incorrectos. Por favor, revise estos datos y vuelva a intentarlo.",
     "Accept Terms and Conditions": "Acepta los T\u00e9rminos y Condiciones",
     "You accepted these terms on": "Aceptaste estos t\u00e9rminos el",
+    "Revoke Acceptance": "Revocar la aceptaci\u00f3n",
     "Go to your newly created portal.": "Ir a la plataforma que acaba de crear."
 }
