--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -563,5 +563,6 @@
     "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "Datu basearekiko konexioak huts egin du. Gehienetan, erabiltzaile izena, pasahitza edo datu basearen aurrezenbakia zuzenak ez direlako gertatu ohi da. Mesedez, berrikusi datu hauek eta saiatu berriro.",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
+    "Revoke Acceptance": "Revoke Acceptance",
     "Go to your newly created portal.": "Joan sortu berri duzun atarira"
 }
