--- a/assets/locales/hr_HR.json
+++ b/assets/locales/hr_HR.json
@@ -477,5 +477,6 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
+    "Revoke Acceptance": "Revoke Acceptance",
     "Go to your newly created portal.": "Kreni na va\u0161 novo izra\u0111eni portal."
 }
