--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -485,5 +485,6 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
+    "Revoke Acceptance": "Revoke Acceptance",
     "Go to your newly created portal.": "Az \u00fajonnan l\u00e9trehozott port\u00e1l megtekint\u00e9se"
 }
