--- a/assets/locales/lt_LT.json
+++ b/assets/locales/lt_LT.json
@@ -452,5 +452,6 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
+    "Revoke Acceptance": "Revoke Acceptance",
     "Go to your newly created portal.": "Go to your newly created portal."
 }
