--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -452,5 +452,6 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
+    "Revoke Acceptance": "Revoke Acceptance",
     "Go to your newly created portal.": "\u041e\u0434\u0435\u0442\u0435 \u043d\u0430 \u0412\u0430\u0448\u0438\u043e\u0442 \u043d\u043e\u0432\u043e\u043a\u0440\u0435\u0438\u0440\u0430\u043d \u043f\u043e\u0440\u0442\u0430\u043b."
 }
