--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -584,5 +584,6 @@
     "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "Pripojenie k datab\u00e1ze bolo ne\u00faspe\u0161n\u00e9. Obvykle je to kv\u00f4li nespr\u00e1vnemu pou\u017e\u00edvate\u013eovi, heslu alebo predpone datab\u00e1zy zadanej hore. Skontrolujte pros\u00edm tieto nastavenia a sk\u00faste znova.",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
+    "Revoke Acceptance": "Revoke Acceptance",
     "Go to your newly created portal.": "Cho\u010fte na V\u00e1\u0161 novo zriaden\u00fd port\u00e1l."
 }
