Language: Message: #add missing translation for confirmation popup - refs BT#22726

--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -29577,3 +29577,6 @@ msgstr "Sie haben diese Nutzungsbedingungen akzeptiert am"
 
 msgid "Revoke Acceptance"
 msgstr "Zustimmung widerrufen"
+
+msgid "Confirmation"
+msgstr "Bestätigung"
