--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28369,3 +28369,6 @@ msgstr "You accepted these terms on"
 
 msgid "Revoke Acceptance"
 msgstr "Revoke Acceptance"
+
+msgid "Confirmation"
+msgstr "Confirmation"
