--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -208,7 +208,7 @@
     "Number submitted": "Eingereichte Anzahl",
     "Visibility": "Sichtbarkeit",
     "Upload corrections": "Korrekturen hochladen",
-    "Confirmation": "Confirmation",
+    "Confirmation": "Best\u00e4tigung",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
     "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
