--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -208,7 +208,7 @@
     "Number submitted": "Cantidad enviada",
     "Visibility": "Visibilidad",
     "Upload corrections": "Subir correcciones",
-    "Confirmation": "Confirmation",
+    "Confirmation": "Confirmaci\u00f3n",
     "Are you sure you want to delete the selected items?": "Are you sure you want to delete the selected items?",
     "Assignments deleted": "Assignments deleted",
     "We\\'re sorry, your browser does not support using a microphone": "We\\'re sorry, your browser does not support using a microphone",
