Language: #fix translation for loggin as in DE - refs BT#22728

--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -4298,7 +4298,7 @@ msgid "Guest"
 msgstr "Gast"
 
 msgid "Login as"
-msgstr "Eingeloggt als"
+msgstr "Einloggen als"
 
 msgid "Login"
 msgstr "Einloggen als"
