Calendar: Language: #fix missing translations - refs BT#22727

--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -510,5 +510,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Mintutos",
+    "Days": "Days",
     "Go to your newly created portal.": "Dir a la plataforma qu'acaba crear."
 }
