--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -527,5 +527,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "\u041c\u0438\u043d\u0443\u0442\u0438",
+    "Days": "Days",
     "Go to your newly created portal.": "\u0412\u043b\u0435\u0437\u0442\u0435 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u0430\u0442\u0430 Chamilo."
 }
