--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -608,5 +608,10 @@
     "Accept Terms and Conditions": "Nutzungsbedingungen akzeptieren",
     "You accepted these terms on": "Sie haben diese Nutzungsbedingungen akzeptiert am",
     "Revoke Acceptance": "Zustimmung widerrufen",
+    "Minutes": "Minuten",
+    "Hours": "Stunden",
+    "Days": "Tage",
+    "Notification to remind the event": "Benachrichtigung zur Erinnerung an das Ereignis",
+    "Before": "Vorher",
     "Go to your newly created portal.": "Gehen Sie zu Ihrem neu erstellten Portal"
 }
