--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -608,5 +608,10 @@
     "Accept Terms and Conditions": "Acepta los T\u00e9rminos y Condiciones",
     "You accepted these terms on": "Aceptaste estos t\u00e9rminos el",
     "Revoke Acceptance": "Revocar la aceptaci\u00f3n",
+    "Minutes": "Minutos",
+    "Hours": "Horas",
+    "Days": "D\u00edas",
+    "Notification to remind the event": "Notificaci\u00f3n para recordar el evento",
+    "Before": "Antes de",
     "Go to your newly created portal.": "Ir a la plataforma que acaba de crear."
 }
