--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -608,5 +608,10 @@
     "Accept Terms and Conditions": "Accepter les conditions d'utilisation",
     "You accepted these terms on": "Vous avez accept\u00e9 ces conditions le",
     "Revoke Acceptance": "R\u00e9voquer l'acceptation",
+    "Minutes": "Minutes",
+    "Hours": "Heures",
+    "Days": "Jours",
+    "Notification to remind the event": "Notification de rappel de l'\u00e9v\u00e8nement",
+    "Before": "Avant le",
     "Go to your newly created portal.": "Aller directement sur votre nouveau portail."
 }
