--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -602,5 +602,8 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "\u05d3\u05e7\u05d5\u05ea",
+    "Days": "Days",
+    "Before": "\u05dc\u05e4\u05e0\u05d9",
     "Go to your newly created portal.": "\u05e2\u05d1\u05d5\u05e8 \u05dc\u05e4\u05d5\u05e8\u05d8\u05dc \u05d4\u05d7\u05d3\u05e9 \u05e9\u05dc\u05da \u05e9\u05e0\u05d5\u05e6\u05e8."
 }
