--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -486,5 +486,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Perc",
+    "Days": "Days",
     "Go to your newly created portal.": "Az \u00fajonnan l\u00e9trehozott port\u00e1l megtekint\u00e9se"
 }
