--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -592,5 +592,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minuti",
+    "Days": "Days",
     "Go to your newly created portal.": "Vai direttamente al portale appena creato"
 }
