--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -608,5 +608,10 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minuten",
+    "Hours": "Uren",
+    "Days": "Days",
+    "Notification to remind the event": "Melding om het evenement te herinneren",
+    "Before": "Voordat",
     "Go to your newly created portal.": "Ga naar uw ge\u00efnstalleerde portaal."
 }
