--- a/assets/locales/nn_NO.json
+++ b/assets/locales/nn_NO.json
@@ -351,5 +351,7 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minutter",
+    "Days": "Days"
 }
