--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -563,5 +563,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minuty",
+    "Days": "Days",
     "Go to your newly created portal.": "Przejd\u017a do nowo utworzonego portalu."
 }
