--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -571,5 +571,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minutos",
+    "Days": "Days",
     "Go to your newly created portal.": "Ir para o seu portal rec\u00e9m-criado."
 }
