--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -576,5 +576,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minute",
+    "Days": "Days",
     "Go to your newly created portal.": "Mergeti la portalul proaspat creat."
 }
