--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -585,5 +585,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Min\u00faty",
+    "Days": "Days",
     "Go to your newly created portal.": "Cho\u010fte na V\u00e1\u0161 novo zriaden\u00fd port\u00e1l."
 }
