--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -607,5 +607,9 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minut",
+    "Days": "Days",
+    "Notification to remind the event": "Obvestilo v opomin na dogodek",
+    "Before": "Pred",
     "Go to your newly created portal.": "Pojdi na novo ustvarjen portal."
 }
