--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -472,5 +472,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minuter",
+    "Days": "Days",
     "Go to your newly created portal.": "G\u00e5 till din nya portal."
 }
