--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -413,5 +413,7 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "\u0e19\u0e32\u0e17\u0e35",
+    "Days": "Days"
 }
