--- a/assets/locales/uk_UA.json
+++ b/assets/locales/uk_UA.json
@@ -373,5 +373,7 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "\u0425\u0432\u0438\u043b\u0438\u043d\u0438",
+    "Days": "Days"
 }
