--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -455,5 +455,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "\u5206",
+    "Days": "Days",
     "Go to your newly created portal.": "\u700f\u89bd\u4f60\u65b0\u5efa\u7684\u7ad9\u53f0"
 }
