--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28340,3 +28340,9 @@ msgstr ""
 
 msgid "Confirmation"
 msgstr ""
+
+msgid "Days"
+msgstr ""
+
+msgid "Notification to remind the event"
+msgstr ""
