--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -607,5 +607,8 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "\u0627\u0644\u062f\u0642\u0627\u0626\u0642",
+    "Days": "Days",
+    "Before": "\u0642\u0628\u0644",
     "Go to your newly created portal.": "Go to your newly created portal."
 }
