--- a/assets/locales/bn_BD.json
+++ b/assets/locales/bn_BD.json
@@ -297,5 +297,6 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Days": "Days"
 }
