--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -587,5 +587,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minuts",
+    "Days": "Days",
     "Go to your newly created portal.": "Aneu a la nova plataforma que heu creat."
 }
