--- a/assets/locales/cs_CZ.json
+++ b/assets/locales/cs_CZ.json
@@ -380,5 +380,7 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minuta",
+    "Days": "Days"
 }
