--- a/assets/locales/el.json
+++ b/assets/locales/el.json
@@ -581,5 +581,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "\u039b\u03b5\u03c0\u03c4\u03ac",
+    "Days": "Days",
     "Go to your newly created portal.": "Go to your newly created portal."
 }
