--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -564,5 +564,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minutuak",
+    "Days": "Days",
     "Go to your newly created portal.": "Joan sortu berri duzun atarira"
 }
