--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -520,5 +520,7 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "\u062f\u0642\u06cc\u0642\u0647",
+    "Days": "Days"
 }
