--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -478,5 +478,7 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minuutit",
+    "Days": "Days"
 }
