--- a/assets/locales/fo_FO.json
+++ b/assets/locales/fo_FO.json
@@ -333,5 +333,6 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Days": "Days"
 }
