--- a/assets/locales/gl.json
+++ b/assets/locales/gl.json
@@ -608,5 +608,10 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minutes",
+    "Hours": "Hours",
+    "Days": "Days",
+    "Notification to remind the event": "Notification to remind the event",
+    "Before": "Before",
     "Go to your newly created portal.": "Go to your newly created portal."
 }
