--- a/assets/locales/id_ID.json
+++ b/assets/locales/id_ID.json
@@ -421,5 +421,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Menit",
+    "Days": "Days",
     "Go to your newly created portal.": "Lihat ke portal anda yang baru dibuat."
 }
