--- a/assets/locales/ko_KR.json
+++ b/assets/locales/ko_KR.json
@@ -396,5 +396,7 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "\ubd84",
+    "Days": "Days"
 }
