--- a/assets/locales/lt_LT.json
+++ b/assets/locales/lt_LT.json
@@ -453,5 +453,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minut\u0117s",
+    "Days": "Days",
     "Go to your newly created portal.": "Go to your newly created portal."
 }
