--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -557,5 +557,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Min\u016btes",
+    "Days": "Days",
     "Go to your newly created portal.": "Dodieties uz savu jaunizveidoto port\u0101lu"
 }
