--- a/assets/locales/ms_MY.json
+++ b/assets/locales/ms_MY.json
@@ -341,5 +341,7 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minutes",
+    "Days": "Days"
 }
