--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -499,5 +499,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Huch'uy tuykuna",
+    "Days": "Days",
     "Go to your newly created portal.": "Ir a la plataforma que acaba de crear."
 }
