--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -433,5 +433,7 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "Minuti",
+    "Days": "Days"
 }
