--- a/assets/locales/tl_PH.json
+++ b/assets/locales/tl_PH.json
@@ -393,5 +393,6 @@
     "Not subscribed": "Not subscribed",
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
-    "Revoke Acceptance": "Revoke Acceptance"
+    "Revoke Acceptance": "Revoke Acceptance",
+    "Days": "Days"
 }
