--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -483,5 +483,7 @@
     "Accept Terms and Conditions": "Accept Terms and Conditions",
     "You accepted these terms on": "You accepted these terms on",
     "Revoke Acceptance": "Revoke Acceptance",
+    "Minutes": "\u5206",
+    "Days": "Days",
     "Go to your newly created portal.": "\u8bbf\u95ee\u4f60\u65b0\u521b\u5efa\u7684\u5165\u95e8\u7f51\u7ad9\u3002"
 }
