Social: Language: #fix translation to use existing translation - refs BT#22741

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -518,7 +518,7 @@
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
-    "Personal Data: Introduction": "Personal Data: Introduction",
+    "Personal data: introduction": "Personal data: introduction",
     "Personal data we keep about you": "Personal data we keep about you",
     "Terms and Conditions": "Terms and Conditions",
     "Read the Terms and Conditions": "Read the Terms and Conditions",
@@ -613,5 +613,6 @@
     "Days": "Days",
     "Notification to remind the event": "Notification to remind the event",
     "Before": "Before",
+    "We respect your privacy!": "We respect your privacy!",
     "Go to your newly created portal.": "Go to your newly created portal."
 }
