--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -518,7 +518,7 @@
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
-    "Personal Data: Introduction": "Personal Data: Introduction",
+    "Personal data: introduction": "Pers\u00f6nliche Daten: Einf\u00fchrung",
     "Personal data we keep about you": "Pers\u00f6nliche Daten, die wir \u00fcber Sie speichern",
     "Terms and Conditions": "Nutzungsbedingungen",
     "Read the Terms and Conditions": "Nutzungsbedingungen lesen",
@@ -613,5 +613,6 @@
     "Days": "Tage",
     "Notification to remind the event": "Benachrichtigung zur Erinnerung an das Ereignis",
     "Before": "Vorher",
+    "We respect your privacy!": "Wir respektieren Ihre Privatsph\u00e4re!",
     "Go to your newly created portal.": "Gehen Sie zu Ihrem neu erstellten Portal"
 }
