--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -518,7 +518,7 @@
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
-    "Personal Data: Introduction": "Personal Data: Introduction",
+    "Personal data: introduction": "Datos personales: introducci\u00f3n",
     "Personal data we keep about you": "Datos personales que guardamos sobre Usted",
     "Terms and Conditions": "T\u00e9rminos y condiciones",
     "Read the Terms and Conditions": "Leer las condiciones del servicio",
@@ -613,5 +613,6 @@
     "Days": "D\u00edas",
     "Notification to remind the event": "Notificaci\u00f3n para recordar el evento",
     "Before": "Antes de",
+    "We respect your privacy!": "Respetamos sus datos personales! Esta p\u00e1gina une todos los aspectos de los datos personales que podr\u00edamos conservar sobre Usted, como los tratamos, lo que nos permiti\u00f3 hacer con ellos y quienes somos, en un esfuerzo para cumplir con todas las normativas sobre los datos personales existentes y aplicables. Gracias por leer con mucha atenci\u00f3n la informaci\u00f3n puesta a su disposici\u00f3n a continuaci\u00f3n. Si le quedan dudas, revise los datos de contactos m\u00e1s a bajo y env\u00edenos sus consultas.",
     "Go to your newly created portal.": "Ir a la plataforma que acaba de crear."
 }
