--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -518,7 +518,7 @@
     "Pages deleted": "Pages deleted",
     "Go to Explore to find a topic of interest, or wait for someone to subscribe you": "Go to Explore to find a topic of interest, or wait for someone to subscribe you",
     "You don\\'t have any course yet": "You don\\'t have any course yet",
-    "Personal Data: Introduction": "Personal Data: Introduction",
+    "Personal data: introduction": "Persoonlijke gegevens: inleiding",
     "Personal data we keep about you": "Persoonlijke gegevens die wij over u bewaren",
     "Terms and Conditions": "Algemene voorwaarden",
     "Read the Terms and Conditions": "Lees de algemene voorwaarden",
@@ -613,5 +613,6 @@
     "Days": "Days",
     "Notification to remind the event": "Melding om het evenement te herinneren",
     "Before": "Voordat",
+    "We respect your privacy!": "Wij respecteren uw privacy!",
     "Go to your newly created portal.": "Ga naar uw ge\u00efnstalleerde portaal."
 }
