--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -30204,3 +30204,6 @@ msgstr "Jours"
 
 msgid "Notification to remind the event"
 msgstr "Notification de rappel de l'évènement"
+
+msgid "Checking push subscription..."
+msgstr "Vérification de la souscription push..."
