--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28432,3 +28432,6 @@ msgstr "Push notification settings (JSON)"
 
 msgid "JSON configuration for Push notifications integration. Example: {'gotify_url':'http://localhost:8080','gotify_token':'yourtoken','enabled':true}. Leave empty if you do not want to use push notifications."
 msgstr "JSON configuration for Push notifications integration. Example: {'gotify_url':'http://localhost:8080','gotify_token':'yourtoken','enabled':true}. Leave empty if you do not want to use push notifications."
+
+msgid "Access denied"
+msgstr "Access denied"
