--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28400,3 +28400,6 @@ msgstr ""
 
 msgid "JSON configuration for Push notifications integration. Example: {'gotify_url':'http://localhost:8080','gotify_token':'yourtoken','enabled':true}. Leave empty if you do not want to use push notifications."
 msgstr ""
+
+msgid "Access denied"
+msgstr ""
