--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28406,3 +28406,9 @@ msgstr ""
 
 msgid "Please remember that modifications to the terms related to GDPR require you to report those modifications to third parties to whom you have provided personal information about your users, as stated in Article 19 of GDPR."
 msgstr ""
+
+msgid "Invalid format"
+msgstr ""
+
+msgid "Duration (hh:mm:ss)"
+msgstr ""
