--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28474,3 +28474,15 @@ msgstr "User is session admin in some sessions"
 
 msgid "Role change denied due to incompatible current assignments:"
 msgstr "Role change denied due to incompatible current assignments:"
+
+msgid "Oops! URL not registered."
+msgstr "Oops! URL not registered."
+
+msgid "The address \"%host%\" is not configured in this portal instance."
+msgstr "The address \"%host%\" is not configured in this portal instance."
+
+msgid "If the problem persists, please contact support."
+msgstr "If the problem persists, please contact support."
+
+msgid "Go to home page"
+msgstr "Go to home page"
