--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28454,3 +28454,24 @@ msgstr ""
 
 msgid "Go to home page"
 msgstr ""
+
+msgid "Session requirements and dependencies"
+msgstr ""
+
+msgid "Dependencies"
+msgstr ""
+
+msgid "Sessions that depend on this session"
+msgstr ""
+
+msgid "My Sessions display mode"
+msgstr ""
+
+msgid "Choose how the \"My Sessions\" page is displayed: as a modern visual block (card) view or the classic list style."
+msgstr ""
+
+msgid "Validate prerequisites only within the same session"
+msgstr ""
+
+msgid "When enabled, a course will be considered validated only if passed within the current session. If disabled, courses passed in other sessions will also unlock dependent courses."
+msgstr ""
